<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">FoodD</string>

    <!-- Navigation -->
    <string name="drawer_logo">Drawer logo</string>

    <!-- Delivery -->
    <string name="deliver_to">DELIVER TO</string>
    <string name="location">Halal Lab office</string>

    <!-- Greetings -->
    <string name="greeting_text">Hey Halal, Good Afternoon!</string>

    <!-- Search -->
    <string name="search_bar_hint">Search dishes, restaurants</string>

    <!-- Categories -->
    <string name="categories">All Categories</string>
    <string name="see_all">See All</string>

    <!-- Restaurant -->
    <string name="restaurant_name">Rose Garden Restaurant</string>
    <string name="restaurant_menu">Burger - Chicken - Rice - Wings</string>

    <!-- Image -->
    <string name="img_content_desc">Restaurant image</string>

    <!-- Restaurant Details -->
    <string name="rating">4.7</string>
    <string name="delivery_charge">Free</string>
    <string name="time">20 min</string>

    <!-- Food Card -->
    <string name="food_content_desc">food_item_image</string>
    <string name="food_name">Food Name</string>

    <!-- Drawer -->
    <string name="drawer_head">FoodD Welcomes you!</string>
    <string name="drawer_body">Today Meal Plan?</string>

    <!-- Splash Text -->
    <string name="splash_text_one">Start Your Food Journey with FoodD!</string>
    <string name="splash_text_two">Hungry? We\'ve Got You!</string>
    <string name="splash_text_three">Discover Great Flavors!</string>
    <string name="splash_text_four">Fast Delivery, Fresh Taste!</string>
    <string name="splash_text_five">Let\'s Satisfy Your Cravings!</string>

    <!-- Social Icons -->
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="X">X</string>
    <string name="linkedin">linkedin</string>

    <!-- Login Page -->
    <string name="login_text">Welcome Back!</string>
    <string name="login_desc">Log in to explore delicious meals.</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button_text">Login</string>
    <string name="guest_login_button_text">Login as Guest</string>
    <string name="goto_sign_up">Do not have Account ? Sign Up</string>
    <string name="logout">Log Out</string>

    <!-- Sign Up Page -->
    <string name="create_account_text">Create Account</string>
    <string name="sign_up_desc">Let\'s get you started with FoodD.</string>
    <string name="name_hint">Enter Name</string>
    <string name="confirm_password_hint">Enter Confirm Password</string>
    <string name="goto_login">Already have Account ? Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="default_web_client_id">453231755266-mudkm0rhpd2qjtpptk94t6uvd2m25bib.apps.googleusercontent.com</string>

    <!-- User Profile -->
    <string name="profile_text">Profile</string>
    <string name="user_name">user_name</string>
    <string name="user_email">user_email</string>
    <string name="user_mobile">user_mobile</string>
    <string name="user_gender">user_gender</string>
    <string name="delete_account_text">Delete Account</string>
    <string name="disable_account_text">Disable Account</string>

    <!-- Retrofit API -->
    <string name="food_api_name">Food Name</string>
    <string name="food_api_price">Food Price</string>
    <string name="food_api_category">Food Category</string>
    <string name="food_api_availability">Food Availability</string>
    <string name="fetch_data">Fetch Data</string>
    <string name="api_text">Retrofit Test</string>

    <!-- Broadcast Receiver -->
    <string name="broadcast_text">Broadcast Receiver Test</string>
    <string name="airplane_mode">Airplane Mode</string>


    <!-- Notification -->
    <string name="notification_button">Notify</string>
    <string name="notification_text">Hello Android!</string>

</resources>