<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/foodd_logo"
        android:layout_width="@dimen/login_logo_width"
        android:layout_height="@dimen/login_logo_height"
        app:srcCompat="@drawable/app_logo"
        app:shapeAppearanceOverlay="@style/drawer_image_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/login_text"
        android:layout_marginTop="@dimen/logo_margin_top"/>

    <TextView
        android:id="@+id/login_text"
        android:text="@string/login_text"
        android:textSize="@dimen/login_text_size"
        android:textColor="@color/orange"
        android:fontFamily="@font/open_sans_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_email_field"
        app:layout_constraintTop_toBottomOf="@id/foodd_logo"
        app:layout_constraintBottom_toTopOf="@id/login_sub_text"
        android:layout_marginTop="@dimen/login_text_margin_top"/>

    <TextView
        android:id="@+id/login_sub_text"
        android:text="@string/login_desc"
        android:textSize="@dimen/login_desc_size"
        android:textColor="@color/light_grey"
        android:fontFamily="@font/open_sans_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_text"
        app:layout_constraintTop_toBottomOf="@id/login_text" />

    <EditText
        android:id="@+id/login_email_field"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:autofillHints=""
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_sub_text"
        app:layout_constraintBottom_toTopOf="@id/login_password_field"
        android:contentDescription="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_shape"
        android:paddingStart="@dimen/edit_text_padding_25"
        android:paddingEnd="@dimen/edit_text_padding_25"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:autofillHints=""
        android:hint="@string/password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_email_field"
        app:layout_constraintBottom_toTopOf="@id/social_icons"
        android:contentDescription="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_shape"
        android:paddingStart="@dimen/edit_text_padding_25"
        android:paddingEnd="@dimen/edit_text_padding_25"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/social_icons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/social_icons_height"
        app:layout_constraintTop_toBottomOf="@id/login_password_field"
        app:layout_constraintBottom_toTopOf="@id/login_button">
        <ImageView
            android:id="@+id/googleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/google"
            app:srcCompat="@drawable/google"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facebookIcon"
            app:layout_constraintHorizontal_chainStyle="spread"/>
        <ImageView
            android:id="@+id/facebookIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/facebook"
            android:contentDescription="@string/facebook"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/googleIcon"
            app:layout_constraintEnd_toStartOf="@+id/xIcon" />
        <ImageView
            android:id="@+id/xIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/x"
            android:contentDescription="@string/X"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/facebookIcon"
            app:layout_constraintEnd_toStartOf="@+id/linkedInIcon"/>
        <ImageView
            android:id="@+id/linkedInIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/linkedin"
            android:contentDescription="@string/linkedin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/xIcon"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_text"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/social_icons"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>