<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signup_screen_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/foodd_logo"
        android:layout_width="@dimen/sign_up_logo_width"
        android:layout_height="@dimen/sign_up_logo_height"
        app:srcCompat="@drawable/app_logo"
        app:shapeAppearanceOverlay="@style/drawer_image_style"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/signup_text"
        android:layout_marginTop="@dimen/sign_up_margin_top"/>

    <TextView
        android:id="@+id/signup_text"
        android:text="@string/create_account_text"
        android:textSize="@dimen/sign_up_text_size"
        android:textColor="@color/orange"
        android:fontFamily="@font/open_sans_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_name_field"
        app:layout_constraintTop_toBottomOf="@id/foodd_logo"
        app:layout_constraintBottom_toTopOf="@id/signup_sub_text"
        android:layout_marginTop="@dimen/margin_top_20"/>

    <TextView
        android:id="@+id/signup_sub_text"
        android:text="@string/sign_up_desc"
        android:textSize="@dimen/sign_up_desc_size"
        android:textColor="@color/light_grey"
        android:fontFamily="@font/open_sans_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/signup_text"
        app:layout_constraintTop_toBottomOf="@id/signup_text" />

    <EditText
        android:id="@+id/signup_name_field"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:autofillHints=""
        android:hint="@string/name_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_sub_text"
        app:layout_constraintBottom_toTopOf="@id/signup_email_field"
        android:contentDescription="@string/name_hint"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_shape"
        android:paddingStart="@dimen/edit_text_padding_25"
        android:paddingEnd="@dimen/edit_text_padding_25"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/signup_email_field"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:autofillHints=""
        android:hint="@string/email_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_name_field"
        app:layout_constraintBottom_toTopOf="@id/signup_password_field"
        android:contentDescription="@string/email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_shape"
        android:paddingStart="@dimen/edit_text_padding_25"
        android:paddingEnd="@dimen/edit_text_padding_25"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/signup_password_field"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:autofillHints=""
        android:hint="@string/password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_email_field"
        app:layout_constraintBottom_toTopOf="@id/signup_c_password_field"
        android:contentDescription="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_shape"
        android:paddingStart="@dimen/edit_text_padding_25"
        android:paddingEnd="@dimen/edit_text_padding_25"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/signup_c_password_field"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/edit_text_height"
        android:autofillHints=""
        android:hint="@string/confirm_password_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_password_field"
        app:layout_constraintBottom_toTopOf="@id/signup_button"
        android:contentDescription="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_shape"
        android:paddingStart="@dimen/edit_text_padding_25"
        android:paddingEnd="@dimen/edit_text_padding_25"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/signup_button"
        android:text="@string/sign_up_text"
        android:layout_width="@dimen/sign_up_button_width"
        android:layout_height="@dimen/sign_up_button_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_c_password_field"
        app:layout_constraintBottom_toTopOf="@id/goto_login"
        android:drawableEnd="@drawable/login"
        android:drawablePadding="@dimen/draw_padding"/>

    <TextView
        android:id="@+id/goto_login"
        android:text="@string/goto_login"
        android:fontFamily="@font/open_sans_regular"
        android:textSize="@dimen/goto_login_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_button"
        app:layout_constraintBottom_toTopOf="@id/continue_with_google" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continue_with_google"
        android:text="@string/sign_in_with_google"
        android:layout_width="@dimen/sign_up_google_button_width"
        android:layout_height="@dimen/sign_up_google_button_height"
        android:background="@drawable/google_sign_up"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:drawablePadding="@dimen/google_draw_padding"
        android:drawableStart="@drawable/google"
        android:paddingStart="@dimen/google_sign_up_padding_start"
        android:paddingEnd="@dimen/google_sign_up_padding_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goto_login"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_bottom_70" />

</androidx.constraintlayout.widget.ConstraintLayout>