<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_root_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/restaurant_img"
        android:layout_width="@dimen/width_0"
        android:contentDescription="@string/img_content_desc"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="@dimen/card_height"
        app:srcCompat="@drawable/restaurant_1"
        app:shapeAppearanceOverlay="@style/rounded_restaurant_image"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_items_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_img">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name"
            android:fontFamily="@font/open_sans_regular"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/restaurant_menu"/>

        <TextView
            android:id="@+id/restaurant_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_menu"
            android:fontFamily="@font/open_sans_light"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name" />

        <LinearLayout
            android:id="@+id/card_item_icons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/restaurant_menu"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/layout_padding_10">

            <ImageView
                android:id="@+id/rating_icon"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:contentDescription="@string/rating"
                app:srcCompat="@drawable/star"/>

            <TextView
                android:id="@+id/rating_text"
                android:text="@string/rating"
                android:fontFamily="@font/open_sans_bold"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"/>

            <ImageView
                android:id="@+id/delivery_icon"
                android:layout_width="@dimen/width_25"
                android:layout_height="@dimen/height_25"
                android:layout_marginStart="@dimen/margin_start_25"
                android:contentDescription="@string/delivery_charge"
                app:srcCompat="@drawable/truck" />

            <TextView
                android:id="@+id/delivery_text"
                android:text="@string/delivery_charge"
                android:fontFamily="@font/open_sans_regular"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10" />

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:contentDescription="@string/time"
                app:srcCompat="@drawable/clock"
                android:layout_marginStart="@dimen/margin_start_25"/>

            <TextView
                android:id="@+id/time_text"
                android:text="@string/time"
                android:fontFamily="@font/open_sans_regular"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>