<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/icon_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/greeting_search_layout"
        android:layout_marginTop="@dimen/margin_top_80">

    <ImageView
        android:id="@+id/drawer_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/drawer_logo"
        app:srcCompat="@drawable/drawer"
        android:background="@drawable/light_circle_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/icon_margin_start"/>

        <TextView
            android:id="@+id/deliver_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deliver_to"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="@dimen/text_size_15"
            android:textColor="@color/orange"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/location_text"
            app:layout_constraintStart_toEndOf="@id/drawer_icon"
            android:layout_marginStart="@dimen/text_margin_start"/>

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin_start"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/location"
            android:textColor="@color/mid_grey"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/drawer_icon"
            app:layout_constraintTop_toBottomOf="@id/deliver_to_text" />

    <ImageView
        android:id="@+id/shopping_bag_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/drawer_logo"
        app:srcCompat="@drawable/shopping_bag"
        android:background="@drawable/dark_circle_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/icon_margin_end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/greeting_search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon_layout">

        <TextView
            android:id="@+id/greeting_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_text"
            android:textSize="@dimen/greeting_ts"
            android:fontFamily="@font/open_sans_regular"
            app:layout_constraintStart_toStartOf="@id/search_view"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_10"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/search_height"
            android:queryHint="@string/search_bar_hint"
            android:iconifiedByDefault="false"
            android:background="@drawable/search_bar_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/greeting_text"
            app:layout_constraintBottom_toTopOf="@id/category"
            android:layout_marginTop="@dimen/margin_10"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/categories"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintStart_toStartOf="@id/search_view"
            app:layout_constraintTop_toBottomOf="@+id/search_view" />

        <TextView
            android:id="@+id/see_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:fontFamily="@font/open_sans_regular"
            android:layout_marginTop="@dimen/margin_10"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintEnd_toEndOf="@id/search_view"
            app:layout_constraintTop_toBottomOf="@+id/search_view"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/food_recycler_view"
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/recycler_view_height"
        android:clipToPadding="false"
        android:paddingStart="@dimen/food_padding_start"
        android:paddingEnd="@dimen/food_padding_end"
        android:paddingTop="@dimen/food_padding_top"
        android:paddingBottom="@dimen/food_padding_bottom"
        android:overScrollMode="never"
        app:layout_constraintTop_toBottomOf="@id/greeting_search_layout"
        app:layout_constraintBottom_toTopOf="@id/restaurant_recycler_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurant_recycler_view"
        android:layout_width="@dimen/width_0"
        android:layout_height="@dimen/recycler_food_height"
        android:clipToPadding="false"
        android:paddingStart="@dimen/restaurant_padding_start"
        android:paddingEnd="@dimen/restaurant_padding_end"
        android:paddingTop="@dimen/restaurant_padding_top"
        android:paddingBottom="@dimen/restaurant_padding_bottom"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/food_recycler_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>